build/log/idf_py_stdout_output_16656
[1/11] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/command_responder.cc.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/command_responder.cc.obj 
/home/lee/.espressif/tools/xtensa-esp32s3-elf/esp-2022r1-11.2.0/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-g++  -I/home/lee/work/CP/snore-recognition/build/config -I/home/lee/work/CP/esp/esp-idf/components/newlib/platform_include -I/home/lee/work/CP/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/lee/work/CP/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/lee/work/CP/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/lee/work/CP/esp/esp-idf/components/freertos/esp_additions/include -I/home/lee/work/CP/esp/esp-idf/components/esp_hw_support/include -I/home/lee/work/CP/esp/esp-idf/components/esp_hw_support/include/soc -I/home/lee/work/CP/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/lee/work/CP/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/lee/work/CP/esp/esp-idf/components/esp_hw_support/port/esp32s3/private_include -I/home/lee/work/CP/esp/esp-idf/components/heap/include -I/home/lee/work/CP/esp/esp-idf/components/log/include -I/home/lee/work/CP/esp/esp-idf/components/soc/include -I/home/lee/work/CP/esp/esp-idf/components/soc/esp32s3/. -I/home/lee/work/CP/esp/esp-idf/components/soc/esp32s3/include -I/home/lee/work/CP/esp/esp-idf/components/hal/esp32s3/include -I/home/lee/work/CP/esp/esp-idf/components/hal/include -I/home/lee/work/CP/esp/esp-idf/components/hal/platform_port/include -I/home/lee/work/CP/esp/esp-idf/components/esp_rom/include -I/home/lee/work/CP/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/lee/work/CP/esp/esp-idf/components/esp_rom/esp32s3 -I/home/lee/work/CP/esp/esp-idf/components/esp_common/include -I/home/lee/work/CP/esp/esp-idf/components/esp_system/include -I/home/lee/work/CP/esp/esp-idf/components/esp_system/port/soc -I/home/lee/work/CP/esp/esp-idf/components/esp_system/port/include/private -I/home/lee/work/CP/esp/esp-idf/components/xtensa/include -I/home/lee/work/CP/esp/esp-idf/components/xtensa/esp32s3/include -I/home/lee/work/CP/esp/esp-idf/components/lwip/include -I/home/lee/work/CP/esp/esp-idf/components/lwip/include/apps -I/home/lee/work/CP/esp/esp-idf/components/lwip/include/apps/sntp -I/home/lee/work/CP/esp/esp-idf/components/lwip/lwip/src/include -I/home/lee/work/CP/esp/esp-idf/components/lwip/port/esp32/include -I/home/lee/work/CP/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/lee/work/CP/snore-recognition/components/tflite-lib -I/home/lee/work/CP/snore-recognition/components/tflite-lib/third_party/gemmlowp -I/home/lee/work/CP/snore-recognition/components/tflite-lib/third_party/flatbuffers/include -I/home/lee/work/CP/snore-recognition/components/tflite-lib/third_party/ruy -I/home/lee/work/CP/snore-recognition/components/tflite-lib/third_party/kissfft -I/home/lee/work/CP/esp/esp-idf/components/spi_flash/include -I/home/lee/work/CP/esp/esp-idf/components/driver/include -I/home/lee/work/CP/esp/esp-idf/components/driver/deprecated -I/home/lee/work/CP/esp/esp-idf/components/driver/esp32s3/include -I/home/lee/work/CP/esp/esp-idf/components/esp_pm/include -I/home/lee/work/CP/esp/esp-idf/components/esp_ringbuf/include -I/home/lee/work/CP/esp/esp-idf/components/esp_timer/include -mlongcalls  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/lee/work/CP/snore-recognition=. -fmacro-prefix-map=/home/lee/work/CP/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu++20 -fno-exceptions -fno-rtti -D_GNU_SOURCE -DIDF_VER=\"v5.0\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -Wno-maybe-uninitialized -Wno-missing-field-initializers -Wno-error=sign-compare -Wno-error=double-promotion -Wno-type-limits -DTF_LITE_STATIC_MEMORY -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/command_responder.cc.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/command_responder.cc.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/command_responder.cc.obj -c /home/lee/work/CP/snore-recognition/main/command_responder.cc
/home/lee/work/CP/snore-recognition/main/command_responder.cc: In function 'void RespondToCommand(int32_t, const char*, int16_t, bool)':
/home/lee/work/CP/snore-recognition/main/command_responder.cc:47:27: error: too many arguments to function 'void send_flag_start_time(bool)'
   47 |       send_flag_start_time(true, true);
      |       ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~
In file included from /home/lee/work/CP/snore-recognition/main/command_responder.cc:18:
/home/lee/work/CP/snore-recognition/main/data_sender.h:7:6: note: declared here
    7 | void send_flag_start_time(bool flag_snore);
      |      ^~~~~~~~~~~~~~~~~~~~
[2/11] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/data_sender.cc.obj
[3/11] Performing build step for 'bootloader'
[1/1] cd /home/lee/work/CP/snore-recognition/build/bootloader/esp-idf/esptool_py && /home/lee/.espressif/python_env/idf5.0_py3.10_env/bin/python /home/lee/work/CP/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/lee/work/CP/snore-recognition/build/bootloader/bootloader.bin
Bootloader binary size 0x5150 bytes. 0x2eb0 bytes (36%) free.
[4/9] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main_functions.cc.obj
In file included from /home/lee/work/CP/snore-recognition/components/tflite-lib/tensorflow/lite/micro/tflite_bridge/flatbuffer_conversions_bridge.h:19,
                 from /home/lee/work/CP/snore-recognition/components/tflite-lib/tensorflow/lite/micro/micro_allocator.h:26,
                 from /home/lee/work/CP/snore-recognition/components/tflite-lib/tensorflow/lite/micro/micro_interpreter.h:26,
                 from /home/lee/work/CP/snore-recognition/main/main_functions.cc:24:
/home/lee/work/CP/snore-recognition/components/tflite-lib/tensorflow/lite/core/api/flatbuffer_conversions.h: In member function 'T* tflite::BuiltinDataAllocator::AllocatePOD()':
/home/lee/work/CP/snore-recognition/components/tflite-lib/tensorflow/lite/core/api/flatbuffer_conversions.h:46:24: warning: 'template<class _Tp> struct std::is_pod' is deprecated: use is_standard_layout && is_trivial instead [-Wdeprecated-declarations]
   46 |     static_assert(std::is_pod<T>::value, "Builtin data structure must be POD.");
      |                        ^~~~~~
In file included from /home/lee/.espressif/tools/xtensa-esp32s3-elf/esp-2022r1-11.2.0/xtensa-esp32s3-elf/xtensa-esp32s3-elf/include/c++/11.2.0/bits/move.h:57,
                 from /home/lee/.espressif/tools/xtensa-esp32s3-elf/esp-2022r1-11.2.0/xtensa-esp32s3-elf/xtensa-esp32s3-elf/include/c++/11.2.0/bits/stl_pair.h:59,
                 from /home/lee/.espressif/tools/xtensa-esp32s3-elf/esp-2022r1-11.2.0/xtensa-esp32s3-elf/xtensa-esp32s3-elf/include/c++/11.2.0/utility:70,
                 from /home/lee/work/CP/snore-recognition/components/tflite-lib/tensorflow/lite/core/c/common.h:1208,
                 from /home/lee/work/CP/snore-recognition/components/tflite-lib/tensorflow/lite/c/common.h:39,
                 from /home/lee/work/CP/snore-recognition/main/audio_provider.h:19,
                 from /home/lee/work/CP/snore-recognition/main/main_functions.cc:18:
/home/lee/.espressif/tools/xtensa-esp32s3-elf/esp-2022r1-11.2.0/xtensa-esp32s3-elf/xtensa-esp32s3-elf/include/c++/11.2.0/type_traits:700:5: note: declared here
  700 |     is_pod
      |     ^~~~~~
ninja: build stopped: subcommand failed.
